Add built-apps repository as submodule
Signed-off-by: Unikraft <contact@unikraft.org>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "binary-tools"]
 	path = binary-tools
 	url = https://github.com/mosajjal/binary-tools
+[submodule "built-apps"]
+	path = built-apps
+	url = https://github.com/unikraft-io/built-apps.git
