small: Move common part in Makefile in utils/base.mk
Signed-off-by: Razvan Deaconescu <razvan.deaconescu@cs.pub.ro>

--- a/small/socket/Makefile
+++ b/small/socket/Makefile
@@ -1,14 +1,2 @@
-CFLAGS = -Wall -fPIC
-LDFLAGS = -static-pie
-
-.PHONY: all clean
-
-all: call_socket
-
-call_socket: call_socket.o
-
-call_socket.o: call_socket.c
-
-clean:
-	-rm -f call_socket call_socket.o
-	-rm -f *~
+BIN = call_socket
+include ../utils/base.mk
